--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "homepage": "https://github.com/firstnoodle/hello-react#readme",
   "dependencies": {
+    "@popperjs/core": "^2.4.2",
     "postcss-loader": "^3.0.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-popper": "^2.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
